--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
     --fundo-principal: #222222;
     --texto: #e0e0e0;
     --texto-inverso: #333333;
-    --destaque: #ff5522;
-    --destaque-inverso: #a73917;
+    --destaque: #109e97;
+    --destaque-inverso: #0a6b66;
     --fundo-card: #444444;
 }
 
@@ -27,27 +27,33 @@ body {
     line-height: 1.5em;
     background-color: var(--fundo-principal);
     color: var(--texto);
-    transition: background-color .5s, color .5s;
+    transition: background-color .5s;
 }
 
 header {
     display: flex;
     justify-content: end;
     align-content: center;
-    
+    align-items: center;
+
     background-color: var(--destaque);
     color: var(--texto);
     padding: 10px;
     position: sticky;
     top: 0;
     z-index: 1;
-    
+}
+
+header img {
+    width: 50px;
+    border-radius: 50%;
+    display: none;
 }
 
 #menu ul {
     display: flex;
     gap: 10px;
-    
+
     list-style: none;
 }
 
@@ -82,7 +88,7 @@ main {
 
 .foto {
     display: block;
-    
+
     width: 200px;
     aspect-ratio: 1/1;
     object-fit: cover;
@@ -118,7 +124,7 @@ main {
 
 #social a:hover {
     color: var(--destaque-inverso);
-    transform: scale(1.25);
+    transform: scale(1.15);
     transition: .2s ease-in-out;
 }
 
@@ -205,6 +211,11 @@ article h2 {
 .titulacao {
     color: var(--destaque-inverso);
     font-size: 1.1em;
+    transition: .2s ease-in-out;
+}
+
+.curso:hover .titulacao {
+    color: var(--destaque);
 }
 
 #projeto-container {
@@ -251,30 +262,36 @@ article h2 {
     object-fit: cover;
     overflow: hidden;
     border-radius: 8px;
-    /* margin-left: 20px; */
 }
 
 footer {
     background-color: var(--destaque);
     color: var(--texto-inverso);
     text-align: center;
-    padding: 15px;
+    padding: 10px;
 }
 
-footer a {
-    color: var(--texto-inverso);
-    text-decoration: none;
+footer span {
     font-weight: bold;
-}
-
-footer a:hover {
-    color: var(--destaque-inverso);
 }
 
 
 
 
 @media screen and (min-width: 768px) {
+    header {
+        justify-content: space-between;
+    }
+    
+    header img {
+        display: block;
+        margin-left: 30px;
+    }
+    
+    .btn-inicio {
+        display: none;
+    }
+
     main {
         grid-template-columns: auto 300px 1fr auto;
     }
@@ -289,7 +306,7 @@ footer a:hover {
     #detalhes {
         grid-column: 3 / 4;
     }
-    
+
     #skill-container {
         grid-template-columns: 1fr 1fr;
     }
