--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ body {
 
 header {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-content: center;
     align-items: center;
 
@@ -45,9 +45,8 @@ header {
 }
 
 header img {
-    width: 60px;
+    width: 45px;
     border-radius: 5px;
-    display: none;
     transition: .2s ease-in-out;
 }
 
@@ -57,7 +56,7 @@ header img:hover {
 
 #menu ul {
     display: flex;
-    gap: 10px;
+    gap: 2px;
 
     list-style: none;
 }
@@ -289,8 +288,12 @@ footer span {
     }
     
     header img {
-        display: block;
+        width: 60px;
         margin-left: 30px;
+    }
+
+    #menu ul {
+        gap: 10px;
     }
     
     .btn-inicio {
